# racionamento-guerra-inteligente

./: .gitignore  CHANGELOG.md  README.md  crt_ui.py  pyproject.toml  requirements.txt  streamlit_app.py  theme.css
.github/workflows/: ci.yml
.streamlit/: config.toml
db/migrations/: 0000_init.sql  0001_grupos_regiao_pedido_ajuda.sql  0002_historico.sql
src/racionador/: cli.py  clima.py  coordenacao.py  historico.py  mapa.py  modelos.py  persistencia.py  persistencia_supabase.py  validade.py
tests/: test_clima.py  test_coordenacao.py  test_crt_ui.py  test_historico.py  test_mapa.py  test_modelos.py  test_persistencia.py  test_persistencia_supabase.py  test_validade.py
